# realmate-challenge

./: .gitignore  README.md  pyproject.toml
backend/: .flake.ini  .gitignore  README.md  pyproject.toml
backend/conversation/: models.py  urls.py  views.py
backend/conversation/api/routes/: conversation.py
backend/conversation/services/: conversation_service.py
backend/conversation/tests/: test_api.py  test_models.py
backend/main/: settings.py  urls.py
backend/message/: admin.py  forms.py
backend/message/api/routes/: message.py
backend/message/api/schemas/: message.py
backend/message/migrations/: 0001_initial.py
backend/message/services/: message_service.py
backend/message/tests/: test_models.py
backend/webhook/: urls.py  views.py
backend/webhook/api/routes/: webhook.py
backend/webhook/api/schemas/: webhook.py
backend/webhook/services/: webhook_service.py
backend/webhook/tests/: tests_views.py
conversation/: admin.py  forms.py  models.py  urls.py  views.py
conversation/api/routes/: conversation.py
conversation/api/schemas/: conversation.py
conversation/migrations/: 0001_initial.py
conversation/services/: conversation_service.py
conversation/tests/: test_api.py  test_models.py
frontend/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json
frontend/frontend/src/: App.tsx  index.css
main/: settings.py  urls.py
message/: models.py
message/services/: message_service.py
webhook/: urls.py  views.py
webhook/services/: webhook_service.py
webhook/tests/: tests_views.py
(+16 files in other folders)
